--- a/MyTasks.Backend/MyTasks.WebApi/MyTasks.WebApi.csproj
+++ b/MyTasks.Backend/MyTasks.WebApi/MyTasks.WebApi.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MyTasks.Application\MyTasks.Application.csproj" />
+    <ProjectReference Include="..\MyTasks.Persistence\MyTasks.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
